--- a/MotoCronos/templates/pages/racers/ALRacers.html
+++ b/MotoCronos/templates/pages/racers/ALRacers.html
@@ -3,4 +3,67 @@
 {% load static %}
 
 {% block content %}
+
+<div class="main-content position-relative max-height-vh-100 h-100">
+    
+    <div class="container-fluid py-4">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <div class="d-flex align-items-center table-responsive p-0">
+                <table class="table align-items-center mb-0">
+                  <thead>
+                    <tr>
+            
+                        <th class="font-weight-bold text-dark">ID Corredor</th>
+                        <th class="font-weight-bold text-dark">Nombre Corredor</th>
+                        <th class="font-weight-bold text-dark">DNI</th>
+                        <th class="font-weight-bold text-dark">Nacimiento</th>
+                        <th class="font-weight-bold text-dark">Celular</th>
+                        <th class="font-weight-bold text-dark">Estado</th>
+                        <th class="font-weight-bold text-dark">-</th>
+                    </tr>
+                  </thead>
+                  {% for r in racers %}
+                  <tbody>
+                    <tr>
+                      <td>
+                        <div class="d-flex px-2 py-1">
+                          <div class="d-flex flex-column">
+                            <h6 class="mb-0 text-sm">{{r.idRacer}}</h6>
+                          </div>
+                        </div>
+                      </td>
+                      <td>
+                        <p class="text-sm font-weight-bold text-dark mb-0">{{r.lname}}, {{r.name}}</p>
+                      </td>
+                      <td class="text-sm">
+                        <p class="text-sm font-weight-bold text-dark mb-0">{{r.dni}}</p>
+                      </td>
+                      <td class="">
+                        <span class="text-sm font-weight-bold text-dark mb-0">{{r.birth|date:"d/m/Y"}}</span>
+                      </td>
+                      <td class="">
+                        <span class="text-sm font-weight-bold text-dark mb-0">{{r.cel}}</span>
+                      </td>
+                      <td class="">
+                        {% if r.active == True %}
+                        <span class="badge badge-sm bg-gradient-success">Activa</span>
+                        {% else %}
+                        <span class="badge badge-sm bg-gradient-danger">Inactiva</span>
+                        {% endif %}
+                      </td>
+                      <td><a href="{% url 'editRacer' %}?idRacer={{r.idRacer}}">Ver <i class="fas fa-pencil-alt ms-auto text-dark cursor-pointer"></i></a></td>
+                    </tr>
+                    
+                  </tbody>
+                  {% endfor %}
+                </table>
+              </div>
+            </div>         
+          </div>
+        </div>
+    </div>
+  </div>
 {% endblock %}
