--- a/MotoCronos/templates/pages/startRace/startRace.html
+++ b/MotoCronos/templates/pages/startRace/startRace.html
@@ -4,18 +4,116 @@
 
 {% block content %}
 
+{% if racersList %}
 <div class="main-content position-relative max-height-vh-100 h-100">
-    
+  <div class="container-fluid py-4">
+    <div class="row">
+      <div class="col-md-8">
+        <div class="card">
+          <div class="card-header">
+            <!-- FORM -->
+          <form class="card-body" method="post" id="form"> {% csrf_token %}
+            <p>Carrera: {{race.name}}</p>
+            <p class="text-uppercase text-sm">Corredores Seleccionados</p>
+            <div class="col-md-24">
+              <div class="form-group table-responsive">
+                  <label for="racers"><h6>La carrera se creará con los siguientes corredores</h6></label><br>
+                  <select name="racersList" id="racersList" multiple size="20" class="col-md-12" >
+                    {% for r in racers %}
+                      <option value="{{r.idRacer}}">
+                        <td> {{r.idRacer}} | {{r.lname}} | {{r.name}} | {{r.dni}} | Activo </td>
+                      </option>
+                    {% endfor %}
+                  </select>
+                </div>
+            </div> <br>
+            <hr class="horizontal dark">
+            <div class="col-md-4">
+                  <div class="form-group">
+                    <input type="submit" class="btn btn-primary" value="Iniciar Carrera" name="btnSave">
+                  </div>
+              </div>
+            </form>
+            <!-- END FORM -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+document.addEventListener('DOMContentLoaded', function(){
+const btnSave = document.getElementById('btnSave');
+const form = document.getElementById('form');
+
+form.addEventListener('submit', function(event) {
+      event.preventDefault();
+      Swal.fire({
+          title: 'Las carreras no se pueden detener o pausar',
+          text: '¿Estás seguro iniciar ésta carrera?',
+          icon: 'question',
+          showCancelButton: true,
+          confirmButtonText: 'Sí',
+          cancelButtonText: 'No'
+      }).then((result) => {
+          if (result.isConfirmed) {
+              form.submit();
+          }
+      });
+  });
+});    
+</script>
+{% else %}
+  {% if idRace %}
+  <div class="main-content position-relative max-height-vh-100 h-100">
+    <div class="container-fluid py-4">
+      <div class="row">
+        <div class="col-md-8">
+          <div class="card">
+            <div class="card-header">
+              <!-- FORM -->
+            <form class="card-body" method="post" id="form"> {% csrf_token %}
+              <p>Carrera: {{race.name}}</p>
+              <p class="text-uppercase text-sm">Seleccionar corredores</p>
+              <div class="col-md-24">
+                <div class="form-group table-responsive">
+                    <label for="racers"><h6>Elegí los corredores (Si no lo ves aquí HABILITA AL CORREDOR):</h6></label><br>
+                    <select name="racersList" id="racersList" multiple size="20" class="col-md-12" >
+                      {% for r in racers %}
+                        <option value="{{r.idRacer}}">
+                          <td> {{r.idRacer}} | {{r.lname}} | {{r.name}} | {{r.dni}} | Activo </td>
+                        </option>
+                      {% endfor %}
+                    </select>
+                  </div>
+              </div> <br>
+              <hr class="horizontal dark">
+              <div class="col-md-4">
+                    <div class="form-group">
+                      <input type="submit" class="btn btn-primary" value="Siguiente" name="btnSave">
+                    </div>
+                </div>
+              </form>
+              <!-- END FORM -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  {% else %}
+  <div class="main-content position-relative max-height-vh-100 h-100">
     <div class="container-fluid py-4">
       <div class="row">
         <div class="col-md-12">
           <div class="card">
             <div class="card-header">
-              <div class="d-flex align-items-center table-responsive p-0">
-                <table class="table align-items-center mb-0">
+              <div class="d-flex table-responsive p-0">
+                <table class="table mb-0">
                   <thead>
                     <tr>
-            
                         <th class="font-weight-bold text-dark">ID Carrera</th>
                         <th class="font-weight-bold text-dark">Nombre Carrera</th>
                         <th class="font-weight-bold text-dark">Vueltas</th>
@@ -24,38 +122,35 @@
                         <th class="font-weight-bold text-dark">-</th>
                     </tr>
                   </thead>
-                  {% for c in carreras%}
+                  {% for r in races %}
                   <tbody>
                     <tr>
                       <td>
                         <div class="d-flex px-2 py-1">
                           <div class="d-flex flex-column justify-content-center">
-                            <h6 class="mb-0 text-sm">{{c.idRace}}</h6>
+                            <h6 class="mb-0 text-sm">{{r.idRace}}</h6>
                           </div>
                         </div>
                       </td>
                       <td>
-                        <p class="text-sm font-weight-bold text-dark mb-0">{{c.name}}</p>
+                        <p class="text-sm font-weight-bold text-dark mb-0">{{r.name}}</p>
                       </td>
-                      <td class="align-middle text-center text-sm">
-                        <p class="text-xs text-dark mb-0 font-weight-bold">{{c.lapNumber}}</p>
+                      <td class="text-sm">
+                        <p class="font-weight-bold">{{r.lapNumber}}</p>
                       </td>
-                      <td class="align-middle text-center">
-            
-                        <span class="text-dark font-weight-bold">{{c.date|date:"d/m/Y"}}</span>
-                        <!-- class="text-secondary text-xs font-weight-bold" -->
+                      <td class="">            
+                        <span class="text-dark font-weight-bold">{{r.date|date:"d/m/Y"}}</span>
                       </td>
                       <td class="align-middle">
-                        {% if c.active == True %}
+                        {% if r.active == True %}
                         <span class="badge badge-sm bg-gradient-success">Activa</span>
                         {% else %}
                         <span class="badge badge-sm bg-gradient-danger">Inactiva</span>
                         {% endif %}
-                        <!-- <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-                          Ver
-                        </a> -->
                       </td>
-                      <td><a href="#">Ver</a></td>
+                      <td>
+                        <a href="?idRace={{r.idRace}}">Iniciar</a>
+                      </td>
                     </tr>
                     
                   </tbody>
@@ -63,55 +158,14 @@
                 </table>
               </div>
             </div>
-            <!-- <form class="card-body">        
-              <div class="row">
-                <div class="col-md-24">
-                    <div class="form-group">
-                      <label for="example-text-input" class="form-control-label">Carreras disponibles</label>
-                    </div>
-                </div>
-                
-              </div>
-              
-              
-              <p class="text-uppercase text-sm">Seleccionar corredores</p>
-                <div class="col-md-24">
-                  <div class="form-group table-responsive">
-                    <label for="racers">Elegí los corredores (Si no lo ves aquí HABILITA AL CORREDOR):</label><br><br>
-
-                    <select name="racers" id="cars" multiple size="20" class="col-md-24" >
-                      
-                        <option value="volvo"> <td> 2 | Juan González Peralta</td> </option>
-                        <option value="volvo"> <td> 3 | Juan González Peralta</td></option>
-                        <option value="volvo"> <td> 4 | Juan González Peralta</td> </option>
-                        <option value="volvo"> <td> 5 | González Peralta</td> </option>
-                        <option value="volvo"> <td> 6 | González Peralta</td> </option>
-                        <option value="volvo"> <td> 7 | González Peralta</td> </option>
-                        <option value="volvo"> <td>  8 | González Peralta</td></option>
-                        <option value="volvo"> <td>9 | González Peralta</td> </option>
-                        <option value="volvo"> <td>10 | González Peralta</td> </option>
-                        <option value="volvo"> <td> 11 | González Peralta</td> </option>
-                        <option value="volvo"> <td> 12 | González Peralta</td> </option>
-                        <option value="volvo"> <td> 13 | González Peralta</td> </option>
-                        <option value="volvo"> <td> 14 | González Peralta</td> </option>
-                        
-                    </select>
-                  </div>
-                </div> <br>
-                <hr class="horizontal dark"><br><br>
-                <div class="col-md-4">
-                <div class="form-group">
-                  <input type="submit" class="btn btn-primary" value="Guardar carrera">
-                </div>
-              </div>
-              </div>
-              
-            </form> -->
-
-            
           </div>
         </div>
     </div>
   </div>
-  
-  {% endblock %}
+
+
+
+  {% endif %}
+{% endif %}
+
+{% endblock %}
