--- a/MotoCronos/templates/pages/racers/NLRacers.html
+++ b/MotoCronos/templates/pages/racers/NLRacers.html
@@ -3,4 +3,106 @@
 {% load static %}
 
 {% block content %}
+
+{% if racers %}
+<div class="main-content position-relative max-height-vh-100 h-100">
+    <div class="container-fluid py-4">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="d-flex align-items-center table-responsive p-0">
+                            <table class="table mb-0">
+                                <thead>
+                                    <tr>
+                                        <th class="font-weight-bold text-dark">ID Corredor</th>
+                                        <th class="font-weight-bold text-dark">Nombre</th>
+                                        <th class="font-weight-bold text-dark">DNI</th>
+                                        <th class="font-weight-bold text-dark">Nacimiento</th>
+                                        <th class="font-weight-bold text-dark">Celular</th>
+                                        <th class="font-weight-bold text-dark">Estado</th>
+                                        <th class="font-weight-bold text-dark">-</th>
+                                    </tr>
+                                </thead>
+                                {% for racer in racers %}
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <div class="d-flex px-2 py-1">
+                                                <div>
+                                                    <h6 class="mb-0 text-sm">{{racer.idRacer}}</h6>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <p class="text-sm font-weight-bold text-dark mb-0">{{racer.lname}}, {{racer.name}}</p>
+                                        </td>
+                                        <td>
+                                            <p class="text-sm font-weight-bold text-dark mb-0">{{racer.dni}}</p>
+                                        </td>
+                                        <td >
+                                            <span class="text-sm font-weight-bold text-dark mb-0">{{racer.birth|date:"d/m/Y"}}</span>
+                                        </td>
+                                        <td>
+                                            <span class="text-sm font-weight-bold text-dark mb-0">{{racer.cel}}</span>
+                                        </td>
+                                        <td >
+                                            {% if racer.active == True %}
+                                            <span class="badge badge-sm bg-gradient-success">Activa</span>
+                                            {% else %}
+                                            <span class="badge badge-sm bg-gradient-danger">Inactiva</span>
+                                            {% endif %}
+                                        </td>
+                                        <td>
+                                            <a href="{% url 'editRacer' %}?idRacer={{racer.idRacer}}">Ver <i class="fas fa-pencil-alt ms-auto text-dark cursor-pointer"></i></a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                                {% endfor %}
+                            </table>
+                        </div>
+                    </div>     
+                </div>
+            </div>
+        </div><br><br>
+    <a href="{% url 'NLRacers' %}" class="btn btn-primary">Volver atrás</a>
+</div>
+
+
+{% else %}<!-- INDEX -->
+<div class="container-fluid py-4">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header pb-0">
+                    <div class="d-flex align-items-center">
+                        <div class="d-flex align-items-center">
+                            <p class="mb-0"><strong>Ingrese nombre o apellido del corredor</strong></p>
+                        </div>
+                    </div>
+                </div>
+            
+                <form class="card-body" method="post"> {% csrf_token %}
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="example-text-input" class="form-control-label">Nombre o Apellido</label>
+                                <input class="form-control" type="text" value="" maxlength="64" id="name" name="name" pattern="[a-zA-Z]+" required>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <input type="submit" class="btn btn-primary" value="Guardar">
+                            </div>
+                        </div>
+                    </div>
+                    <h4 class="text-danger">{{error}} </h4>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
+
+
 {% endblock %}
